feature: Rename packages

--- a/apps/docs/pages/my-mdx-page.mdx
+++ b/apps/docs/pages/my-mdx-page.mdx
@@ -32,6 +32,7 @@ dark:
 
 // Docs: https://tailwindcss.com/docs/theme#core-plugins
 
+```javascript
 {
 theme: {
 colors: {
@@ -52,7 +53,10 @@ backgroundColor: ({ theme }) => ({
 })
 }
 }
+```
 
 // Usage
 text-btn-primary
 bg-btn-primary
+
+// Turborepo Example: https://github.com/vercel/turbo/tree/main/examples/design-system
