doc: Update root Readme

--- a/apps/docs/pages/my-mdx-page.mdx
+++ b/apps/docs/pages/my-mdx-page.mdx
@@ -60,3 +60,4 @@ text-btn-primary
 bg-btn-primary
 
 // Turborepo Example: https://github.com/vercel/turbo/tree/main/examples/design-system
+// Changeset showcase: https://www.youtube.com/watch?v=vO80X5zM8_Y
