--- a/apps/docs/content/components/accordion.mdx
+++ b/apps/docs/content/components/accordion.mdx
@@ -1,12 +1,10 @@
-# My MDX page
+---
+metaTitle: Accordion
+metaDescription: Accordion description here.
+name: accordion
+---
 
-This is a list in markdown:
-
-- One
-- Two
-- Three
-
-Checkout my React component:
+# Accordion
 
 Tailwind app configuration:
 https://tailwindcss.com/docs/content-configuration#working-with-third-party-libraries
@@ -23,37 +21,14 @@ Carbon color tokens example:
 https://carbondesignsystem.com/guidelines/color/usage/
 https://carbondesignsystem.com/components/tabs/style/
 
-btn-primary: #4506cb
+**btn-primary: #4506cb**
 
 bg-button-primary
 text-button-primary
 
 dark:
 
-// Docs: https://tailwindcss.com/docs/theme#core-plugins
-
-```javascript
-{
-theme: {
-colors: {
-blue: {
-'100': '#435512',
-'200': '#435512',
-}
-},
-color: ({ theme }) => ({
-'btn-primary': theme('colors.blue.200'),
-'btn-secondary': theme('colors.blue.100'),
-...theme('colors'),
-}),
-backgroundColor: ({ theme }) => ({
-'btn-primary': theme('colors.blue.100'),
-'btn-secondary': theme('colors.blue.200'),
-...theme('colors'),
-})
-}
-}
-```
+// [Docs](https://tailwindcss.com/docs/theme#core-plugins)
 
 // Usage
 text-btn-primary
