feature: Override default MDX components

--- a/apps/docs/content/components/accordion.mdx
+++ b/apps/docs/content/components/accordion.mdx
@@ -6,6 +6,18 @@ name: accordion
 
 # Accordion
 
+# Heading 1
+
+## Heading 2
+
+### Heading 3
+
+#### Heading 4
+
+##### Heading 5
+
+###### Heading 6
+
 Tailwind app configuration:
 https://tailwindcss.com/docs/content-configuration#working-with-third-party-libraries
 
