--- a/apps/docs/content/overview/introduction.mdx
+++ b/apps/docs/content/overview/introduction.mdx
@@ -5,3 +5,10 @@ name: introduction
 ---
 
 # Introduction
+
+<Description>
+  An open-source UI component library for building high-quality, accessible
+  design systems and web apps.
+</Description>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
