feature: Extend colors doc section

--- a/apps/docs/content/design/colors.mdx
+++ b/apps/docs/content/design/colors.mdx
@@ -11,6 +11,19 @@ name: colors
   design systems and web apps.
 </Description>
 
+##### Table of contents
+
+- [Palette](#palette)
+- [Theme](#theme)
+  - [Core tokens](#core-tokens)
+  - [Background tokens](#background-tokens)
+  - [Border tokens](#border-tokens)
+  - [Button tokens](#button-tokens)
+  - [Text tokens](#text-tokens)
+  - [Field tokens](#field-tokens)
+  - [Support tokens](#support-tokens)
+  - [Icon tokens](#icon-tokens)
+
 ### Palette
 
 Palette description here.
@@ -64,6 +77,274 @@ Color tokens that can be applied across components are called core tokens. There
     {
       group: "Button",
       appliedTo: "Buttons backgrounds",
+    },
+  ]}
+/>
+
+#### Background tokens
+
+Background tokens description here.
+
+<ColorTokensTable
+  data={[
+    {
+      token: "background",
+      usage: "Default page background",
+      value: "gray-40",
+    },
+    {
+      token: "background-inverse",
+      usage: "{How to use token}",
+      value: "gray-50",
+    },
+    {
+      token: "background-inverse",
+      usage: "{How to use token}",
+      value: "gray-60",
+    },
+  ]}
+/>
+
+#### Border tokens
+
+Border tokens description here.
+
+<ColorTokensTable
+  data={[
+    {
+      token: "TDB",
+      usage: "{How to use token}",
+      value: "gray-40",
+    },
+    {
+      token: "TDB",
+      usage: "{How to use token}",
+      value: "gray-50",
+    },
+    {
+      token: "TDB",
+      usage: "{How to use token}",
+      value: "gray-60",
+    },
+  ]}
+/>
+
+#### Button tokens
+
+Button tokens description here.
+
+<ColorTokensTable
+  data={[
+    {
+      token: "button-primary",
+      usage: "Primary button background color",
+      value: "gray-100",
+    },
+    {
+      token: "button-primary-hover",
+      usage: "Hover color for button-primary",
+      value: "gray-80",
+    },
+    {
+      token: "button-primary-active",
+      usage: "{How to use token}",
+      value: "gray-70",
+    },
+    {
+      token: "button-secondary",
+      usage: "Secondary button background color",
+      value: "gray-60",
+    },
+    {
+      token: "button-secondary-hover",
+      usage: "Hover color for button-secondary",
+      value: "gray-50",
+    },
+    {
+      token: "button-secondary-active",
+      usage: "{How to use token}",
+      value: "gray-40",
+    },
+    {
+      token: "button-tertiary",
+      usage: "Tertiary button background color",
+      value: "gray-30",
+    },
+    {
+      token: "button-tertiary-hover",
+      usage: "{How to use token}",
+      value: "gray-20",
+    },
+    {
+      token: "button-tertiary-active",
+      usage: "{How to use token}",
+      value: "gray-10",
+    },
+    {
+      token: "button-disabled",
+      usage: "{How to use token}",
+      value: "gray-70",
+    },
+    {
+      token: "button-danger",
+      usage: "{How to use token}",
+      value: "gray-70",
+    },
+  ]}
+/>
+
+#### Text tokens
+
+Text tokens description here.
+
+<ColorTokensTable
+  data={[
+    {
+      token: "text-primary",
+      usage: "Primary body copy; Headers;",
+      value: "gray-100",
+    },
+    {
+      token: "text-secondary",
+      usage: "{How to use token}",
+      value: "gray-90",
+    },
+    {
+      token: "text-placeholder",
+      usage: "{How to use token}",
+      value: "gray-80",
+    },
+    {
+      token: "text-on-color",
+      usage: "{How to use token}",
+      value: "gray-70",
+    },
+    {
+      token: "text-on-color-disabled",
+      usage: "{How to use token}",
+      value: "gray-60",
+    },
+    {
+      token: "text-disabled",
+      usage: "{How to use token}",
+      value: "gray-50",
+    },
+    {
+      token: "text-error",
+      usage: "{How to use token}",
+      value: "gray-40",
+    },
+  ]}
+/>
+
+#### Field tokens
+
+Field tokens description here.
+
+<ColorTokensTable
+  data={[
+    {
+      token: "field",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "field-hover",
+      usage: "{How to use token}",
+      value: "gray-90",
+    },
+    {
+      token: "field-active",
+      usage: "{How to use token}",
+      value: "gray-80",
+    },
+    {
+      token: "field-focus",
+      usage: "{How to use token}",
+      value: "gray-70",
+    },
+    {
+      token: "field-border",
+      usage: "{How to use token}",
+      value: "gray-60",
+    },
+    {
+      token: "field-border-hover",
+      usage: "{How to use token}",
+      value: "gray-50",
+    },
+    {
+      token: "field-disabled",
+      usage: "{How to use token}",
+      value: "gray-40",
+    },
+  ]}
+/>
+
+#### Support tokens
+
+Support tokens description here.
+
+<ColorTokensTable
+  data={[
+    {
+      token: "support-success",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "support-warning",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "support-info",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "support-error",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+  ]}
+/>
+
+#### Icon tokens
+
+Icon tokens description here.
+
+<ColorTokensTable
+  data={[
+    {
+      token: "icon-primary",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "icon-primary-hover",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "icon-secondary",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "icon-secondary-hover",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "icon-on-color",
+      usage: "{How to use token}",
+      value: "gray-100",
+    },
+    {
+      token: "icon-disabled",
+      usage: "{How to use token}",
+      value: "gray-100",
     },
   ]}
 />
