feature: Add components playground

--- a/apps/docs/content/components/accordion.mdx
+++ b/apps/docs/content/components/accordion.mdx
@@ -6,45 +6,11 @@ name: accordion
 
 # Accordion
 
-# Heading 1
+<Description>
+  A vertically stacked set of interactive headings that each reveal an
+  associated section of content.
+</Description>
 
-## Heading 2
-
-### Heading 3
-
-#### Heading 4
-
-##### Heading 5
-
-###### Heading 6
-
-Tailwind app configuration:
-https://tailwindcss.com/docs/content-configuration#working-with-third-party-libraries
-
-Custom plugin:
-
-- https://tailwindcss.com/docs/plugins#adding-utilities
-- https://github.com/saadeghi/daisyui/blob/master/src/index.js [daisyui plugin sample]
-
-Tailwind theme:
-https://www.skies.dev/tailwind-themes
-
-Carbon color tokens example:
-https://carbondesignsystem.com/guidelines/color/usage/
-https://carbondesignsystem.com/components/tabs/style/
-
-**btn-primary: #4506cb**
-
-bg-button-primary
-text-button-primary
-
-dark:
-
-// [Docs](https://tailwindcss.com/docs/theme#core-plugins)
-
-// Usage
-text-btn-primary
-bg-btn-primary
-
-// Turborepo Example: https://github.com/vercel/turbo/tree/main/examples/design-system
-// Changeset showcase: https://www.youtube.com/watch?v=vO80X5zM8_Y
+<Playground code={`import React from 'react';`}>
+  <AccordionDemo />
+</Playground>
