--- a/apps/docs/content/components/button.mdx
+++ b/apps/docs/content/components/button.mdx
@@ -6,6 +6,12 @@ name: button
 
 # Button
 
-Playground:
+<Description>
+  The button component is probably the most widely used element in any user
+  interface or website as it can be used to launch an action but also to link to
+  other pages.
+</Description>
 
-<Button />
+<Playground code={`import React from 'react';`}>
+  <ButtonDemo />
+</Playground>
