--- a/apps/docs/content/overview/getting-started.mdx
+++ b/apps/docs/content/overview/getting-started.mdx
@@ -40,6 +40,7 @@ import { Button } from "@te/core-react/button";
 }
 ```
 
+Doc: [link](https://github.com/jkrems/proposal-pkg-exports/)
 See this [issue](https://stackoverflow.com/questions/70296652/how-can-i-use-exports-in-package-json-today-for-nested-submodules-and-typescri)
 
 #### Apply styling
