feature: Refactor tokens

--- a/apps/docs/content/design/colors.mdx
+++ b/apps/docs/content/design/colors.mdx
@@ -1,19 +1,16 @@
 ---
-metaTitle: Colors
+metaTitle: "IDS: Colors"
 metaDescription: Colors page.
 name: colors
 ---
 
 # Colors
 
-<Description>
-  An open-source UI component library for building high-quality, accessible
-  design systems and web apps.
-</Description>
+Itools design system team prefers to design with the HSL color model, which makes it easier for designers to have a clear psychological expectation of color when adjusting colors, as well as facilitate communication in teams.
 
 ### Palette
 
-Palette description here.
+Itools design system color palette totals handcrafted 30 colors. These colors will be enough to create an attractive and functional UI's. Also you can customize and create your own color palette.
 
 <ColorsList />
 
@@ -70,24 +67,24 @@ Color tokens that can be applied across components are called core tokens. There
 
 #### Background tokens
 
-Background tokens description here.
+Token groups makes it easier to find and apply color tokens.
 
 <ColorTokensTable
   data={[
     {
       token: "background",
       usage: "Default page background",
-      value: "gray-40",
+      value: "white",
     },
     {
-      token: "background-inverse",
-      usage: "{How to use token}",
-      value: "gray-50",
+      token: "background-hover",
+      usage: "Hover state color for background",
+      value: "steelGray-10",
     },
     {
-      token: "background-inverse",
-      usage: "{How to use token}",
-      value: "gray-60",
+      token: "background-selected",
+      usage: "Selected state color for background",
+      value: "steelGray-20",
     },
   ]}
 />
