--- a/apps/docs/content/overview/getting-started.mdx
+++ b/apps/docs/content/overview/getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-metaTitle: Getting started
+metaTitle: "IDS: Getting started"
 metaDescription: Getting started page.
 name: getting_started
 ---
