feature: Create sticky doc footer

--- a/apps/docs/content/design/colors.mdx
+++ b/apps/docs/content/design/colors.mdx
@@ -14,11 +14,7 @@ Itools design system color palette totals handcrafted 30 colors. These colors wi
 
 <ColorsList />
 
-### Theme
-
-Theme description here.
-
-#### Core tokens
+### Core tokens
 
 Color tokens that can be applied across components are called core tokens. There are ten main groups of core color tokens. They are grouped by the common UI element that they are applied to. Token groups makes it easier to find and apply color tokens.
 
@@ -96,19 +92,9 @@ Border tokens description here.
 <ColorTokensTable
   data={[
     {
-      token: "TDB",
-      usage: "{How to use token}",
-      value: "gray-40",
-    },
-    {
-      token: "TDB",
-      usage: "{How to use token}",
-      value: "gray-50",
-    },
-    {
-      token: "TDB",
-      usage: "{How to use token}",
-      value: "gray-60",
+      token: "border-base",
+      usage: "Border color on background",
+      value: "steelGray-20",
     },
   ]}
 />
@@ -131,48 +117,48 @@ Button tokens description here.
     },
     {
       token: "button-primary-active",
-      usage: "{How to use token}",
-      value: "gray-70",
+      usage: "Active color for button-primary",
+      value: "black",
     },
     {
       token: "button-secondary",
       usage: "Secondary button background color",
-      value: "gray-60",
+      value: "steelGray-20",
     },
     {
       token: "button-secondary-hover",
       usage: "Hover color for button-secondary",
-      value: "gray-50",
+      value: "gray-20",
     },
     {
       token: "button-secondary-active",
-      usage: "{How to use token}",
-      value: "gray-40",
+      usage: "Active color for button-secondary",
+      value: "white",
     },
     {
       token: "button-tertiary",
       usage: "Tertiary button background color",
-      value: "gray-30",
+      value: "black",
     },
     {
       token: "button-tertiary-hover",
-      usage: "{How to use token}",
-      value: "gray-20",
+      usage: "Hover color for button-tertiary",
+      value: "white",
     },
     {
       token: "button-tertiary-active",
-      usage: "{How to use token}",
-      value: "gray-10",
+      usage: "Active color for button-tertiary",
+      value: "white",
     },
     {
       token: "button-disabled",
-      usage: "{How to use token}",
-      value: "gray-70",
+      usage: "Disabled state color for all buttons",
+      value: "gray-30",
     },
     {
       token: "button-danger",
       usage: "{How to use token}",
-      value: "gray-70",
+      value: "white",
     },
   ]}
 />
@@ -185,13 +171,13 @@ Text tokens description here.
   data={[
     {
       token: "text-primary",
-      usage: "Primary body copy; Headers;",
-      value: "gray-100",
+      usage: "Primary body copy; Headings; Hover text color for text-secondary",
+      value: "steelGray-90",
     },
     {
       token: "text-secondary",
-      usage: "{How to use token}",
-      value: "gray-90",
+      usage: "Secondary text color; Input labels color;",
+      value: "steelGray-60",
     },
     {
       token: "text-placeholder",
@@ -200,23 +186,28 @@ Text tokens description here.
     },
     {
       token: "text-on-color",
-      usage: "{How to use token}",
-      value: "gray-70",
+      usage: "Text on interactive colors",
+      value: "white",
     },
     {
       token: "text-on-color-disabled",
-      usage: "{How to use token}",
-      value: "gray-60",
+      usage: "Disabled text color for $text-on-color",
+      value: "white",
     },
     {
       token: "text-disabled",
       usage: "{How to use token}",
-      value: "gray-50",
+      value: "steelGray-40",
+    },
+    {
+      token: "text-placeholder",
+      usage: "{How to use token}",
+      value: "white",
     },
     {
       token: "text-error",
       usage: "{How to use token}",
-      value: "gray-40",
+      value: "white",
     },
   ]}
 />
@@ -302,33 +293,23 @@ Icon tokens description here.
   data={[
     {
       token: "icon-primary",
-      usage: "{How to use token}",
-      value: "gray-100",
-    },
-    {
-      token: "icon-primary-hover",
-      usage: "{How to use token}",
-      value: "gray-100",
+      usage: "Primary icons",
+      value: "steelGray-90",
     },
     {
       token: "icon-secondary",
       usage: "{How to use token}",
-      value: "gray-100",
-    },
-    {
-      token: "icon-secondary-hover",
-      usage: "{How to use token}",
-      value: "gray-100",
+      value: "white",
     },
     {
       token: "icon-on-color",
       usage: "{How to use token}",
-      value: "gray-100",
+      value: "white",
     },
     {
       token: "icon-disabled",
       usage: "{How to use token}",
-      value: "gray-100",
+      value: "white",
     },
   ]}
 />
