feature: Add typography doc

--- a/apps/docs/content/components/accordion.mdx
+++ b/apps/docs/content/components/accordion.mdx
@@ -14,3 +14,116 @@ name: accordion
 <Playground code={`import React from 'react';`}>
   <AccordionDemo />
 </Playground>
+
+## Props
+
+Props generic description here...
+
+### Root
+
+Root component description here...
+
+<Table
+  header={[
+    {
+      key: "prop",
+      title: "Prop",
+      className: "w-[45%]",
+    },
+    {
+      key: "type",
+      title: "Type",
+      className: "w-[27.5%]",
+    },
+    {
+      key: "default",
+      title: "Default",
+      className: "w-[27.5%]",
+    },
+  ]}
+  data={[
+    {
+      prop: <Code>value</Code>,
+      type: (
+        <Code type="secondary" copyable={false}>
+          string
+        </Code>
+      ),
+      default: "-",
+    },
+    {
+      prop: <Code>onValueChange</Code>,
+      type: (
+        <Code type="secondary" copyable={false}>
+          function
+        </Code>
+      ),
+      default: "-",
+    },
+    {
+      prop: <Code>collapsible</Code>,
+      type: (
+        <Code type="secondary" copyable={false}>
+          boolean
+        </Code>
+      ),
+      default: (
+        <Code type="secondary" copyable={false}>
+          false
+        </Code>
+      ),
+    },
+    {
+      prop: <Code>disabled</Code>,
+      type: (
+        <Code type="secondary" copyable={false}>
+          boolean
+        </Code>
+      ),
+      default: (
+        <Code type="secondary" copyable={false}>
+          false
+        </Code>
+      ),
+    },
+  ]}
+/>
+
+### Item
+
+Root component description here...
+
+<Table
+  header={[
+    {
+      key: "prop",
+      title: "Prop",
+      className: "w-[45%]",
+    },
+    {
+      key: "type",
+      title: "Type",
+      className: "w-[27.5%]",
+    },
+    {
+      key: "default",
+      title: "Default",
+      className: "w-[27.5%]",
+    },
+  ]}
+  data={[
+    {
+      prop: <Code>disabled</Code>,
+      type: (
+        <Code type="secondary" copyable={false}>
+          boolean
+        </Code>
+      ),
+      default: (
+        <Code type="secondary" copyable={false}>
+          false
+        </Code>
+      ),
+    },
+  ]}
+/>
